change swagger api annotations
