# docs/swagger.yaml
@@ -162,14 +162,13 @@ paths:
       summary: 联盟链证书申请
       tags:
       - qcp
-  /qcp/apply/{id}:
     put:
       consumes:
       - application/x-www-form-urlencoded
       description: 申请审核
       parameters:
       - description: 申请ID
-        in: path
+        in: query
         minimum: 1
         name: id
         required: true
@@ -186,7 +185,8 @@ paths:
         "200":
           description: OK
           schema:
-            type: integer
+            $ref: '#/definitions/types.Result'
+            type: object
       summary: 申请审核
       tags:
       - qcp
